# velocity_smoother

./: CMakeLists.txt  README.md  package.xml  velocity_smoother_nodelet_plugin.xml
cfg/: VelocitySmoother.cfg
include/velocity_smoother/: velocity_smoother.hpp
launch/: velocity_smoother.launch
params/: velocity_smoother_params.yaml
src/: velocity_smoother.cpp
