<?xml version="1.0"?>
<package format="2">
  <name>velocity_smoother</name>
  <version>0.0.0</version>
  <description>The velocity_smoother package</description>
  <maintainer email="phuc@todo.todo">phuc</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>ecl_threads</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>ecl_threads</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>

  <export>
    <nodelet plugin="${prefix}/velocity_smoother_nodelet_plugin.xml"/>
  </export>
</package>
